logs/dag_id=ETL/run_id=manual__2023-10-22T14:06:43.105485+00:00/task_id=Upload_Data/attempt=1.log
[2023-10-22T14:06:43.960+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL.Upload_Data manual__2023-10-22T14:06:43.105485+00:00 [queued]>
[2023-10-22T14:06:43.968+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL.Upload_Data manual__2023-10-22T14:06:43.105485+00:00 [queued]>
[2023-10-22T14:06:43.968+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-10-22T14:06:43.980+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): Upload_Data> on 2023-10-22 14:06:43.105485+00:00
[2023-10-22T14:06:43.987+0000] {standard_task_runner.py:57} INFO - Started process 207 to run task
[2023-10-22T14:06:43.990+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'ETL', 'Upload_Data', 'manual__2023-10-22T14:06:43.105485+00:00', '--job-id', '41', '--raw', '--subdir', 'DAGS_FOLDER/first_dags.py', '--cfg-path', '/tmp/tmp7l630b8z']
[2023-10-22T14:06:43.993+0000] {standard_task_runner.py:85} INFO - Job 41: Subtask Upload_Data
[2023-10-22T14:06:44.037+0000] {task_command.py:416} INFO - Running <TaskInstance: ETL.Upload_Data manual__2023-10-22T14:06:43.105485+00:00 [running]> on host 7da2f449415b
[2023-10-22T14:06:44.122+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='me' AIRFLOW_CTX_DAG_ID='ETL' AIRFLOW_CTX_TASK_ID='Upload_Data' AIRFLOW_CTX_EXECUTION_DATE='2023-10-22T14:06:43.105485+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-22T14:06:43.105485+00:00'
[2023-10-22T14:06:44.123+0000] {sql.py:274} INFO - Executing: 

        \copy scrap FROM '/var/lib/postgresql/data/data_upload/tangerang_transformed.csv' DELIMITER ',' CSV HEADER

        
[2023-10-22T14:06:44.130+0000] {base.py:73} INFO - Using connection ID 'postgres_docker' for task execution.
[2023-10-22T14:06:44.140+0000] {base.py:73} INFO - Using connection ID 'postgres_docker' for task execution.
[2023-10-22T14:06:44.148+0000] {sql.py:418} INFO - Running statement: 

        \copy scrap FROM '/var/lib/postgresql/data/data_upload/tangerang_transformed.csv' DELIMITER ',' CSV HEADER

        , parameters: None
[2023-10-22T14:06:44.150+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "\"
LINE 3:         \copy scrap FROM '/var/lib/postgresql/data/data_uplo...
                ^

[2023-10-22T14:06:44.157+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=ETL, task_id=Upload_Data, execution_date=20231022T140643, start_date=20231022T140643, end_date=20231022T140644
[2023-10-22T14:06:44.168+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 41 for task Upload_Data (syntax error at or near "\"
LINE 3:         \copy scrap FROM '/var/lib/postgresql/data/data_uplo...
                ^
; 207)
[2023-10-22T14:06:44.203+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-22T14:06:44.221+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
